# gpu_computing_in_robotics

./: .gitignore  README.md
cmake/: FindCUDADevice.cmake
data_sets/IMM_pointXYZIRNL/: model_processed_pointXYZIRNL.xml
data_sets/IMM_pointXYZIRNL/data_processed/: scan000.pcd  scan001.pcd  scan002.pcd  scan003.pcd  scan004.pcd  scan005.pcd  scan006.pcd  scan007.pcd  scan008.pcd  scan009.pcd  scan010.pcd  scan011.pcd  scan012.pcd  scan013.pcd  scan014.pcd  scan015.pcd  scan016.pcd  scan017.pcd  scan018.pcd  scan019.pcd  scan020.pcd  scan021.pcd  scan022.pcd  scan023.pcd  scan024.pcd  scan025.pcd  scan026.pcd  scan027.pcd  scan028.pcd  scan029.pcd  scan030.pcd  scan031.pcd  scan032.pcd  scan033.pcd  scan034.pcd  scan035.pcd  scan036.pcd  scan037.pcd  scan038.pcd  scan039.pcd  (+26 more)
tutorial/: build_all.sh
tutorial/data/: scan_Velodyne_VLP16.pcd  scan_Velodyne_VLP16_2.pcd
tutorial/lesson_0/: CMakeLists.txt
tutorial/lesson_0/include/: cudaWrapper.h  lesson_0.h
tutorial/lesson_0/src/: cudaWrapper.cpp  lesson_0.cu  lesson_0_main.cpp
tutorial/lesson_1/: CMakeLists.txt
tutorial/lesson_1/include/: cudaWrapper.h  lesson_1.cuh  lesson_1.h
tutorial/lesson_1/src/: cudaWrapper.cpp  lesson_1.cu  lesson_1_main.cpp
tutorial/lesson_10/: CMakeLists.txt
tutorial/lesson_10/include/: cudaWrapper.h  lesson_10.cuh  lesson_10.h  point_types.h
tutorial/lesson_10/src/: cudaWrapper.cpp  lesson_10.cu  lesson_10_main.cpp
tutorial/lesson_11/: CMakeLists.txt
tutorial/lesson_11/include/: cudaWrapper.h  lesson_11.cuh  lesson_11.h
tutorial/lesson_11/src/: cudaWrapper.cpp  lesson_11.cu  lesson_11_main.cpp
tutorial/lesson_12/: CMakeLists.txt
tutorial/lesson_12/include/: CCUDAAXBSolverWrapper.h  cudaWrapper.h  lesson_12.cuh  lesson_12.h  point_types.h
tutorial/lesson_12/src/: CCUDAAXBSolverWrapper.cpp  cudaWrapper.cpp  lesson_12.cu  lesson_12_main.cpp
tutorial/lesson_13/: CMakeLists.txt
tutorial/lesson_13/include/: cudaWrapper.h  lesson_13.h
tutorial/lesson_13/src/: CCUDAAXBSolverWrapper.cpp  cudaWrapper.cpp  lesson_13.cu  lesson_13_main.cpp  lesson_13_main_multiple_pose.cpp
tutorial/lesson_14/: CMakeLists.txt
tutorial/lesson_14/include/: CCUDAAXBSolverWrapper.h  cudaWrapper.h  data_model.hpp  helper_cuda.h  helper_cusolver.h  lesson_14.cuh  lesson_14.h  point_types.h
tutorial/lesson_14/src/: CCUDAAXBSolverWrapper.cpp  cudaWrapper.cpp  data_model.cpp  lesson_14.cu  lesson_14_main.cpp
tutorial/lesson_15/: CMakeLists.txt
tutorial/lesson_15/include/: cudaWrapper.h  lesson_15.cuh  lesson_15.h  point_types.h
tutorial/lesson_15/src/: CCUDAAXBSolverWrapper.cpp  cudaWrapper.cpp  data_model.cpp  lesson_15.cu  lesson_15_main.cpp
tutorial/lesson_16/: CMakeLists.txt
tutorial/lesson_16/include/: cudaWrapper.h  lesson_16.cuh  lesson_16.h
tutorial/lesson_16/src/: CCUDAAXBSolverWrapper.cpp  cudaWrapper.cpp  lesson_16.cu  lesson_16_main.cpp
tutorial/lesson_17/: CMakeLists.txt
tutorial/lesson_17/include/: cudaWrapper.h  lesson_17.h
tutorial/lesson_17/src/: cudaWrapper.cpp  lesson_17.cu  lesson_17_main.cpp
tutorial/lesson_18/: CMakeLists.txt
tutorial/lesson_18/include/: BFROSTMatcher.h  GPUMatching.h  prototypes.h
tutorial/lesson_18/src/: BFROSTMatcher.cpp  CUDA.cu  GPUMatching.cpp  lesson_18_main.cpp
tutorial/lesson_19/: CMakeLists.txt
tutorial/lesson_19/include/: cudaWrapper.h  lesson_19.h
tutorial/lesson_19/src/: cudaWrapper.cpp  lesson_19.cu  lesson_19_main.cpp
tutorial/lesson_2/: CMakeLists.txt
tutorial/lesson_2/include/: cudaWrapper.h  lesson_2.cuh  lesson_2.h
tutorial/lesson_2/src/: cudaWrapper.cpp  lesson_2.cu  lesson_2_main.cpp
tutorial/lesson_3/: CMakeLists.txt
tutorial/lesson_3/include/: cudaWrapper.h
tutorial/lesson_3/src/: cudaWrapper.cpp  (+1 more)
tutorial/lesson_4/: CMakeLists.txt
tutorial/lesson_5/: CMakeLists.txt
tutorial/lesson_6/: CMakeLists.txt
tutorial/lesson_7/: CMakeLists.txt
tutorial/lesson_7/include/: cudaWrapper.h  lesson_7.cuh  lesson_7.h
tutorial/lesson_7/src/: cudaWrapper.cpp  lesson_7.cu  lesson_7_main.cpp
tutorial/lesson_8/: CMakeLists.txt
tutorial/lesson_9/: CMakeLists.txt
use_cases/fastSLAM/: .cproject  .project  CMakeLists.txt
use_cases/fastSLAM/dataset/: model_reduced_pointXYZIRNL.xml
use_cases/fastSLAM/dataset/data_set_reduced/: scan0.pcd  scan100.pcd  scan1000.pcd  scan1020.pcd  scan1040.pcd  scan1060.pcd  scan1080.pcd  scan1100.pcd  scan1120.pcd  scan1140.pcd  scan1160.pcd  scan1180.pcd  scan120.pcd  scan1200.pcd  scan1220.pcd  scan1240.pcd  scan1260.pcd  scan1280.pcd  scan1300.pcd  scan1320.pcd  scan1340.pcd  scan1360.pcd  scan1380.pcd  scan140.pcd  scan1400.pcd  scan1420.pcd  scan1440.pcd  scan1460.pcd  scan1480.pcd  scan1500.pcd  scan1520.pcd  scan1540.pcd  scan1560.pcd  scan1580.pcd  scan160.pcd  scan1600.pcd  scan1620.pcd  scan1640.pcd  scan1660.pcd  scan1680.pcd  (+283 more)
use_cases/fastSLAM/include/: cuda_algorithms.cuh  rgd_particle_filter_CUDAWrapper.h
use_cases/fastSLAM/src/: cuda_algorithms.cu  fastSLAM.cpp  rgd_particle_filter_CUDAWrapper.cpp
use_cases/particle_filter_localization/: CMakeLists.txt
use_cases/particle_filter_localization/dataset/: odom_and_pointXYZL.xml
use_cases/particle_filter_localization/dataset/data/: scan1500.pcd  scan1505.pcd  scan1510.pcd  scan1515.pcd  scan1520.pcd  scan1525.pcd  scan1530.pcd  scan1535.pcd  scan1540.pcd  scan1545.pcd  scan1550.pcd  scan1555.pcd  scan1560.pcd  scan1565.pcd  scan1570.pcd  scan1575.pcd  scan1580.pcd  scan1585.pcd  scan1590.pcd  scan1595.pcd  scan1600.pcd  scan1605.pcd  scan1610.pcd  scan1615.pcd  scan1620.pcd  scan1625.pcd  scan1630.pcd  scan1635.pcd  scan1640.pcd  scan1645.pcd  scan1650.pcd  scan1655.pcd  scan1660.pcd  scan1665.pcd  scan1670.pcd  scan1675.pcd  scan1680.pcd  scan1685.pcd  scan1690.pcd  scan1695.pcd  (+820 more)
use_cases/particle_filter_localization/include/: particle_filter.h  particle_filter_fast.h
use_cases/particle_filter_localization/src/: particle_filter.cpp  particle_filter_fast.cpp  particle_filter_localization_fast_main.cpp  particle_filter_localization_main.cpp
use_cases/robotic_arm_collision_detection/: CMakeLists.txt
(+51 files in other folders)
